--- a/style.css
+++ b/style.css
@@ -1,9 +1,102 @@
-body{background-color: peachpuff;}
-h1{margin: 5px;}
-.header img{float:left;
-border: solid pink 10px;}
-.introduction{padding-left: 380px;
-    padding-top: 60px;}
-.content{clear: both;
-    padding-top: 10px;}
-.content h2{border-bottom: solid pink 5px;}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-weight: 1.5em;
+  color: #423d1a;
+}
+
+h2 {
+  font-weight: 25px;
+  color: #6046B6;
+  margin: 20px 0 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
+}
+
+ul,
+li {
+  list-style-type: none;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 270px 1fr;
+  grid-template-rows: 370px 1fr 30px;
+  background-color: #d3d3d3;
+  font: 20px/1.3 Times New Roman, serif;
+  max-width: 1480px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.header-wrapper {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 200px 80px;
+}
+
+.header-wrapper img {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  padding: 10px;
+}
+
+.header-wrapper h1 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  padding: 50px 0 0;
+}
+
+.header-wrapper h2 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+nav {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  padding-left: 10px;
+}
+
+nav li {
+  font: 25px/2.0 Times New Roman, serif;
+  color: #423d1a;
+}
+
+.main-wrapper {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+footer {
+  grid-column: 1/3;
+  grid-row: 3/4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 30px;
+}
+
+pre code {
+  background-color: #eeeeee;
+  border: 1px solid #999999;
+  display: block;
+  padding: 10px;
+}
+
+.violet {
+  color: #772077;
+}
+
+.mustard {
+  color: #915d18;
+}
